# rust-practice

./: .gitignore  Cargo.toml  README.md
rust-axum-postgres-api/: Cargo.toml
rust-axum-postgres-api/src/: schema.rs
simple-web/: Cargo.toml  table.sql
simple-web/src/: api.rs  error.rs  main.rs
